[tool.poetry]
name = "learnpoetry"
version = "0.1.0"
description = ""
authors = ["Valerii Rishniak"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
